[package]
name = "spa-app"
version = "0.1.0"
authors = ["NelsonBarnes <barnes319@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5", features = ["router", "desktop"] }
rusqlite = "0.26.2"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json", "default-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Debug
tracing = "0.1.40"
env_logger = "0.11.5"
